# Foresight-AI-

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
.claude/: launch.json  settings.json  settings.local.json
.claude/agents/: execution-analyst.md  judge.md  ml-analyst.md  product-architect.md  repo-cartographer.md  research-analyst.md  risk-analyst.md  skeptic.md
.github/workflows/: deploy-bots.yml  evening-council-review.yml  live-scanner.yml  nightly-phantom.yml
alembic/: env.py
alembic/versions/: 001_init_all_tables.py
configs/: council_v2_wide_tp.json  council_v2b_wide_tp_wide_trail.json  sweep_best_90wr.json  sweep_ultra_92wr.json  tuned_72wr_50trades.json
configs/specialists/: AAPL_config.json  ABBV_config.json  ADBE_config.json  (+75 more)
deploy/: entrypoint.sh  healthcheck.py  setup.sh  supervisord.conf
examples/: compare_trading_repos.sh  generate_example_report.py
output/: example-mvp-001.json  example-mvp-001.md
scripts/: compare_versions.py  download_historical.py  download_opra.py  download_opra_batch.py  download_trident_opra.py  download_universe_polygon.py  fast_sweep.py  param_sweep.py  run_all_real.py  run_backtest_v10.py  run_backtest_v4.py  run_backtest_v5.py  run_backtest_v6.py  run_backtest_v7.py  run_backtest_v8.py  run_backtest_v9.py  run_daily_review.py  run_hybrid_backtest.py  run_index_backtest.py  run_lotto_prod.py  run_lotto_yolo.py  run_phantom.py  run_production_scanner.py  run_rapid_backtest.py  run_scalp_v2_scanner.py  run_scanner.py  run_specialist_scanner.py  run_trident.py  run_trident_backtest.py  run_unified_options.py  run_volume_scalper.py  trident_lotto_candlestick.py  trident_lotto_volume_flow.py  trident_optimize_volume.py
(+313 files in other folders)
