[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowedge"
version = "0.1.0"
description = "Repo intelligence and debate engine for trading system evaluation"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "typer>=0.15",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "httpx>=0.28",
    "structlog>=24.0",
    "gitpython>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[project.scripts]
flowedge = "flowedge.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/flowedge"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "UP047",  # TypeVar style preference — keep explicit for clarity
    "B008",   # FastAPI uses Query() in defaults by design
]

[tool.ruff.lint.per-file-ignores]
"src/flowedge/ui/*.py" = ["E501"]  # Dashboard HTML templates have long JS lines

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_core.*", "langchain_anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
